# nekro-web

./: .gitmodules  README.md
.github/workflows/: build.yml  deploy.yml  main.yml
web-frontend/: .gitignore  CMakeLists.txt  build.bat  build.sh  eslint.config.ts  fam.html  index.html  make.bat  make.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-frontend/cpp/: ascii-renderer.cpp  test.cpp
web-frontend/cpp/ascii-renderer/: CMakeLists.txt  ascii-renderer.cpp
web-frontend/cpp/fam-interface/: CMakeLists.txt  fam-interface.cpp
web-frontend/public/: index.html  manifest.json
web-frontend/src/: App.css  App.js  ascii-renderer.ts  ascii-renderer.tsx  css.d.ts  index.css  logo-link.tsx  main.ts  projects.ts  style.css
web-frontend/src/fam/: App.tsx  apu.d.ts  fam-audio-processor.ts  fam-main.ts  index.css  index.tsx
web-frontend/src/fam/components/: BaseModule.tsx  ChannelStrip.tsx  ChannelStripGroup.tsx  ControlPanel.tsx  DigitalDisplay.tsx  EnvelopeSection.tsx  Knob.tsx  Label.tsx  Led.tsx  LengthCounterSection.tsx  NoiseStrip.tsx  PanelSection.tsx  PulseStrip.tsx  Slider.tsx  Stepper.tsx  Switch.tsx  Synth.tsx  SynthPanel.tsx  TactileButton.tsx  Toggle.tsx  TriangleStrip.tsx
web-frontend/src/fam/components/keyboard/: Keyboard.tsx  KeyboardKey.tsx  MidiSelector.tsx
web-frontend/src/main/: ascii-renderer.ts
